byte-code-compiler/test_files/typing/good/testfile-unique-1.psc
int_32 main() {
  int_32 x;
  if (1) { int_32 x; }
}
