byte-code-compiler/test_files/typing/bad/testfile-arrow-1.psc
int_32 main() { 1->a; }
